name:           ExpriementsInHaskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         ijet

executable ExpriementsInHaskell
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec,
                   uu-parsinglib
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   containers,
                   transformers,
                   probability,
                   CC-delcont,
                   ListLike,
                   mtl,
                   split,
                   HDBC,
                   HDBC-mysql,
                   parsec,
                   uu-parsinglib
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: 
                   PrettyPrinter.Formatter1,
                   PrettyPrinter.Formatter2,
                   PrettyPrinter.Formatter1WithLet,
                   PrettyPrinter.PPInterface
                   PrettyPrinter.Utils

