name:           ExpriementsInHaskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         ijet

executable ExpriementsInHaskell
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   containers,
                   transformers,
                   probability,
                   CC-delcont,
                   ListLike
  hs-source-dirs:  src
  ghc-options:     -Wall

